# zeus-lang

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  new_test_file.txt
.github/workflows/: cmake.yml  release.yml
compiler/: CMakeLists.txt  Compiler.cpp  Compiler.h  main.cpp
compiler/backends/: llvm_backend.cpp  llvm_backend.h  llvm_intrinsics.cpp
compiler/examples/: math.zeus
compiler/src/compiler/: Compiler.cpp  Compiler.h  CompilerOptions.cpp  CompilerOptions.h
compiler/src/compiler/backends/: llvm_backend.cpp  llvm_backend.h
compiler/src/linker/: linker.h
compiler/src/linker/unix/: linker.cpp
compiler/src/linker/windows/: linker.cpp
compiler/src/os/unix/: command.cpp
compiler/tests/: CMakeLists.txt  compiler_test.cpp  lexer_test.cpp  plattform_tests.cpp
compiler/tests/errortests/: arithmetic-bitwise-not-float.txt  arithmetic-bitwise-not-float.zeus  arithmetic-bitwise-or-string.zeus  arithmetic-bitwise-xor-string.txt  arithmetic-bitwise-xor-string.zeus  arithmetic-divide-string-compound.txt  arithmetic-divide-string-compound.zeus  arithmetic-divide-string.zeus  arithmetic-division-by-zero.txt  arithmetic-division-by-zero.zeus  arithmetic-left-shift-string.txt  arithmetic-left-shift-string.zeus  arithmetic-modulo-float-float.zeus  arithmetic-modulo-float.zeus  arithmetic-multiply-incompatible-types.txt  arithmetic-right-shift-float.txt  arithmetic-subtract-string.txt  arithmetic-subtract-string.zeus  arithmetic-unary-minus-string.txt  arithmetic-unary-minus-string.zeus  array-assign-immutable.txt  array-assign-immutable.zeus  assign-float-to-double.txt  assign-float-to-double.zeus  constmodification.txt  constmodification.zeus  defer-noarg.txt  defer-noarg.zeus  fail-decl-in-blocks.txt  fail-decl-in-blocks.zeus  function-arg-mut.txt  function-arg-mut.zeus  global_mut_slice.txt  global_mut_slice.zeus  interface-by-value.txt  interface-by-value.zeus  internal.zeus  interpolation-utf8-error.txt  interpolation-utf8-error.zeus  keyword-as-identifier.txt  (+29 more)
compiler/tests/errortests/arithmetic/: arithmetic-bitwise-and-float.txt  arithmetic-bitwise-and-float.zeus  arithmetic-bitwise-not-float.txt  arithmetic-bitwise-not-float.zeus  arithmetic-bitwise-or-string.txt  arithmetic-bitwise-xor-string.txt  arithmetic-bitwise-xor-string.zeus  arithmetic-compound-expression-mismatch.txt  arithmetic-compound-expression-mismatch.zeus  arithmetic-divide-string.txt  arithmetic-incomplete-and.txt  arithmetic-incomplete-and.zeus  arithmetic-incomplete-div.txt  arithmetic-incomplete-div.zeus  arithmetic-incomplete-lshift.txt  arithmetic-incomplete-lshift.zeus  arithmetic-incomplete-mod.txt  arithmetic-incomplete-mod.zeus  arithmetic-incomplete-mul.txt  arithmetic-incomplete-mul.zeus  arithmetic-incomplete-or.txt  arithmetic-incomplete-or.zeus  arithmetic-incomplete-plus.txt  arithmetic-incomplete-plus.zeus  arithmetic-incomplete-rshift.txt  (+26 more)
compiler/tests/projecteuler/: problem1.zeus  problem2.zeus  problem3.zeus
compiler/tests/testfiles/: alternative-number-repr.txt  alternative-number-repr.zeus  arraylist.txt  arraylist.zeus  arraytest.txt  arraytest.zeus  chararray.zeus  comparestring.txt  comparestring.zeus  conditions.txt  conditions.zeus  convert2string.txt  convert2string.zeus  convertfromstring.txt  convertfromstring.zeus  externannotation.zeus  forloop.txt  forloop.zeus  functionoverloading.txt  functionoverloading.zeus  functionpointer.txt  functionpointer.zeus  functions.zeus  global_constants.txt  global_constants.zeus  global_var.txt  global_var.zeus  helloworld.zeus  interface-multiple.zeus  interface-single.txt  interface-single.zeus  lambda-expression.zeus  lambda-infer-expression.zeus  matchint.txt  matchint.zeus  math.txt  math.zeus  mixedtypes.txt  mixedtypes.zeus  nestedloops.txt  (+27 more)
examples/: helloworld.zeus  math.zeus  raylibtest.zeus
linker/unix/: linker.cpp
linker/windows/: linker.cpp
parser/: CMakeLists.txt  Environment.cpp  Lexer.cpp  Parser.cpp  Scope.cpp  TypeChecker.cpp  TypeRegistry.cpp  TypeResolver.cpp  VariableType.cpp  config.h.in  module.cpp
parser/ast/: ASTNode.cpp  AnnotatedNode.cpp  BlockNode.cpp  DerefNode.cpp  ExternFunctionDefinition.cpp  FunctionCallNode.cpp  FunctionDefinition.cpp  FunctionDefinitionBase.cpp  FunctionSignature.cpp  InterfaceDeclaration.cpp  NumberConstant.cpp  RawStringConstant.cpp  ReturnStatement.cpp  StringConstant.cpp  VariableAccess.cpp  VariableAssignment.cpp  VariableDeclaration.cpp
parser/include/: Environment.h  dbg_assert.h
parser/include/ast/: ASTNode.h  AnnotatedNode.h  ArrayAccess.h  ArrayAssignment.h  ArrayInitializer.h  ArrayRepeatInitializer.h  BinaryExpression.h  BlockNode.h  BreakStatement.h  Comparisson.h  ContinueStatement.h  DeferStatement.h  DerefNode.h  EnumAccess.h  EnumDeclaration.h  ExternFunctionDefinition.h  FieldAccess.h  FieldAssignment.h  ForLoop.h  FunctionCallNode.h  FunctionDefinition.h  FunctionDefinitionBase.h  FunctionSignature.h  IfCondition.h  IfMacro.h  InterfaceDeclaration.h  InterpolatedString.h  LambdaExpression.h  LogicalExpression.h  MatchExpression.h  MethodCallNode.h  NumberConstant.h  OperatorNode.h  RangeExpression.h  RawAnnotation.h  RawStringConstant.h  ReferenceAccess.h  ReturnStatement.h  StringConstant.h  StructDeclaration.h  (+9 more)
parser/include/lexer/: Lexer.h
parser/include/parser/: Parser.h  module.h
parser/include/types/: Annotation.h  Scope.h  TypeChecker.h  TypeRegistry.h  TypeResolver.h  VariableType.h
src/compiler/: Compiler.cpp  Compiler.h  CompilerOptions.cpp  CompilerOptions.h
src/compiler/backends/: llvm_backend.cpp  llvm_intrinsics.h
src/os/unix/: command.cpp
stdlib/core/: libc.zeus  prelude.zeus  utils.zeus
stdlib/std/: array.zeus  fs.zeus  io.zeus  math.zeus  str.zeus
stdlib/std/os/: unix.zeus  windows.zeus
tests/: CMakeLists.txt  compiler_test.cpp
tests/testfiles/: forloop.zeus  functions.txt  functions.zeus  math.zeus  whileloop.zeus
tools/: clang.zeus  zbindgen.zeus
zeus-lsp/: CMakeLists.txt  main.cpp
zeus-lsp/src/lsp/: CompilerOptions.cpp  CompilerOptions.h  LanguageServer.cpp  LanguageServer.h  lsp.h
(+42 files in other folders)
